fix: remove image add spacing

--- a/src/components/startseite/startseite.component.scss
+++ b/src/components/startseite/startseite.component.scss
@@ -14,6 +14,7 @@ img {
   max-height: 195px;
   width: auto;
   height: auto;
+  padding-left: 130px;
 }
 
 div {
